--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Legal Solutions</title>
+    <link rel="shortcut icon" href="./images/business.png" type="image/x-icon">
+
+    <!-- raw css -->
+    <link rel="stylesheet" href="./style.css">
 
     <!-- google font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -46,13 +50,67 @@
         h1,
         h2,
         h3 {
-            font-family: EB Garamond;
+            font-family: "EB Garamond";
         }
     </style>
 </head>
 
 <body class="font-poppins">
+    <!-- header -->
+    <header>
+        <section class="w-10/12 md:w-10/12 2xl:container mx-auto">
+            <!-- nav -->
+            <nav>
+                <div class="navbar bg-base-100">
+                    <div class="navbar-start">
+                        <img src="./images/logo2.png" alt="">
+                    </div>
+                    <div class="navbar-center hidden lg:flex">
+                        <ul class="menu menu-horizontal px-1 text-gray">
+                            <li><a class="hover:bg-amber-50 hover:text-gold">Home</a></li>
+                            <li><a class="hover:bg-amber-50 hover:text-gold">Services <i
+                                        class="fa-solid fa-chevron-right"></i></a></li>
+                            <li><a class="hover:bg-amber-50 hover:text-gold">Cases <i
+                                        class="fa-solid fa-chevron-right"></i></a></li>
+                            <li><a class="hover:bg-amber-50 hover:text-gold">Blog <i
+                                        class="fa-solid fa-chevron-right"></i></a></li>
+                            <li><a class="hover:bg-amber-50 hover:text-gold">Contact Us <i
+                                        class="fa-solid fa-chevron-right"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="navbar-end">
+                        <a class="btn bg-gold hover:bg-amber-600 text-white hidden lg:inline-flex">Free Consultation</a>
+                        <div class="dropdown">
+                            <div tabindex="0" role="button" class="btn btn-ghost lg:hidden">
+                                <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
+                                    stroke="currentColor">
+                                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+                                        d="M4 6h16M4 12h8m-8 6h16" />
+                                </svg>
+                            </div>
+                            <ul tabindex="0"
+                                class="menu menu-sm dropdown-content bg-base-100 rounded-box z-[1] mt-3 w-52 p-2 right-0 shadow">
+                                <li><a>Home</a></li>
+                                <li><a>Services</a></li>
+                                <li><a>Cases</a></li>
+                                <li><a>Blog</a></li>
+                                <li><a>Contact Us</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </nav>
 
+            <!-- banner -->
+
+        </section>
+    </header>
+
+    <!-- main -->
+    <main></main>
+
+    <!-- footer -->
+    <footer></footer>
 </body>
 
 </html>
