--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 extend: {
                     colors: {
                         'gold': '#B68C5A',
-                        'gray': '#707070',
+                        'desc-color': '#707070',
                     },
                     fontFamily: {
                         'garamond': 'EB Garamond',
@@ -58,15 +58,15 @@
 <body class="font-poppins">
     <!-- header -->
     <header>
-        <section class="w-10/12 md:w-10/12 2xl:container mx-auto">
+        <section class="w-11/12 md:w-10/12 2xl:container mx-auto">
             <!-- nav -->
             <nav>
-                <div class="navbar bg-base-100">
+                <div class="navbar bg-base-100 py-10 px-0">
                     <div class="navbar-start">
                         <img src="./images/logo2.png" alt="">
                     </div>
                     <div class="navbar-center hidden lg:flex">
-                        <ul class="menu menu-horizontal px-1 text-gray">
+                        <ul class="menu menu-horizontal px-1 text-desc-color">
                             <li><a class="hover:bg-amber-50 hover:text-gold">Home</a></li>
                             <li><a class="hover:bg-amber-50 hover:text-gold">Services <i
                                         class="fa-solid fa-chevron-right"></i></a></li>
@@ -100,10 +100,35 @@
                     </div>
                 </div>
             </nav>
-
-            <!-- banner -->
-
         </section>
+
+
+        <!-- banner -->
+        <div class="hero lg:min-h-screen bg-banner lg:rounded-lg lg:w-10/12 mx-auto">
+            <div class="hero-overlay bg-black bg-opacity-50 lg:rounded-lg"></div>
+            <div class="hero-content text-white text-center">
+                <div class="lg:w-2/3 mx-auto py-10 space-y-10">
+                    <h1 class="mb-5 text-4xl lg:text-7xl font-bold">We Provide Effective Legal Solutions</h1>
+                    <p class="mb-5 text-gray-300 text-xs lg:text-base">
+                        Provident cupiditate voluptatem et in. Quaerat fugiat ut assumenda excepturi exercitationem
+                        quasi. In deleniti eaque aut repudiandae et a id nisi.
+                    </p>
+                    <form class="flex flex-col lg:flex-row gap-5 h-14">
+                        <input type="text" class="w-full rounded-md px-2 lg:px-4 text-black"
+                            placeholder="Search your services">
+                        <div>
+                            <button
+                                class="font-medium bg-gold h-full px-8 text-white rounded-lg text-xl">
+                                Search
+                            </button>
+                        </div>
+                    </form>
+
+                </div>
+            </div>
+        </div>
+
+
     </header>
 
     <!-- main -->
