what client say complete

--- a/index.html
+++ b/index.html
@@ -123,7 +123,6 @@
                             </button>
                         </div>
                     </form>
-
                 </div>
             </div>
         </div>
@@ -257,8 +256,87 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </section>
+
+        <!-- section: what our client say -->
+        <section class="w-11/12 md:w-10/12 2xl:container mx-auto">
+            <h2 class="text-center font-bold text-3xl lg:text-4xl text-dark-2 mb-5">
+                What Our Client Say
+            </h2>
+            <p class="text-center text-desc-color lg:w-1/2 mx-auto mb-5 md:mb-14">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form, by injected humour.
+            </p>
+
+            <div class="carousel w-full lg:h-[500px] rounded-lg">
+                <div id="slide1" class="carousel-item relative w-full">
+                    <img src="./images/slider-1.jpg" class="w-full object-cover object-top" />
+                    <div class="bg-black bg-opacity-70 absolute h-full w-full"></div>
+                    <div class="absolute h-full w-full flex justify-center items-center">
+                        <div class="text-white text-center w-2/3">
+                            <i class="fa-solid fa-user"></i>
+                            <h3 class="text-2xl font-bold">Awlad Hossain</h3>
+                            <p class="mb-10">UIX Designer</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                                piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                                McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of
+                                the more obscure Latin words, consectetur.</p>
+                        </div>
+
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide3" class="btn btn-ghost text-white text-3xl">❮</a>
+                        <a href="#slide2" class="btn btn-ghost text-white text-3xl">❯</a>
+                    </div>
+                </div>
 
 
+                <div id="slide2" class="carousel-item relative w-full">
+                    <img src="./images/slider-2.jpg" class="w-full object-cover object-top" />
+                    <div class="bg-black bg-opacity-70 absolute h-full w-full"></div>
+                    <div class="absolute h-full w-full flex justify-center items-center">
+                        <div class="text-white text-center w-2/3">
+                            <i class="fa-solid fa-user"></i>
+                            <h3 class="text-2xl font-bold">Awlad Hossain</h3>
+                            <p class="mb-10">UIX Designer</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                                piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                                McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of
+                                the more obscure Latin words, consectetur.</p>
+                        </div>
+
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide1" class="btn btn-ghost text-white text-3xl">❮</a>
+                        <a href="#slide3" class="btn btn-ghost text-white text-3xl">❯</a>
+                    </div>
+                </div>
+
+                
+                <div id="slide3" class="carousel-item relative w-full">
+                    <img src="./images/slider-3.jpg" class="w-full object-cover object-top" />
+                    <div class="bg-black bg-opacity-70 absolute h-full w-full"></div>
+                    <div class="absolute h-full w-full flex justify-center items-center">
+                        <div class="text-white text-center w-2/3">
+                            <i class="fa-solid fa-user"></i>
+                            <h3 class="text-2xl font-bold">Awlad Hossain</h3>
+                            <p class="mb-10">UIX Designer</p>
+                            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a
+                                piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard
+                                McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of
+                                the more obscure Latin words, consectetur.</p>
+                        </div>
+
+                    </div>
+                    <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                        <a href="#slide2" class="btn btn-ghost text-white text-3xl">❮</a>
+                        <a href="#slide1" class="btn btn-ghost text-white text-3xl">❯</a>
+                    </div>
+                </div>
+
+                
             </div>
         </section>
     </main>
