--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
                     </div>
                 </div>
 
-                
+
                 <div id="slide3" class="carousel-item relative w-full">
                     <img src="./images/slider-3.jpg" class="w-full object-cover object-top" />
                     <div class="bg-black bg-opacity-70 absolute h-full w-full"></div>
@@ -336,8 +336,60 @@
                     </div>
                 </div>
 
-                
+
             </div>
+        </section>
+
+        <!-- section: frequently asked questions -->
+        <section class="w-11/12 md:w-10/12 2xl:container mx-auto">
+            <h2 class="text-center font-bold text-3xl lg:text-4xl text-dark-2 mb-5">
+                Frequently Asked Questions
+            </h2>
+            <p class="text-center text-desc-color lg:w-1/2 mx-auto mb-5 md:mb-14">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form, by injected humour.
+            </p>
+
+            <div class="grid grid-cols-2 items-center gap-20">
+                <!-- accordion -->
+                <div class="space-y-5">
+                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                        <input type="radio" name="my-accordion-3" checked="checked" />
+                        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                        <input type="radio" name="my-accordion-3" />
+                        <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
+                        <div class="collapse-content">
+                            <p>hello</p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- image -->
+                <div>
+                    <img src="./images/faq.png" alt="">
+                </div>
+            </div>
+
         </section>
     </main>
 
