--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     colors: {
                         'gold': '#B68C5A',
                         'desc-color': '#707070',
-                        'dark-2': '#414040',
+                        'dark-2 bg-gray-100': '#414040',
                     },
                     fontFamily: {
                         'garamond': 'EB Garamond',
@@ -354,28 +354,28 @@
             <div class="grid grid-cols-2 items-center gap-20">
                 <!-- accordion -->
                 <div class="space-y-5">
-                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                    <div class="collapse collapse-plus bg-gray-100 rounded-md py-7">
                         <input type="radio" name="my-accordion-3" checked="checked" />
                         <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
                         <div class="collapse-content">
                             <p>hello</p>
                         </div>
                     </div>
-                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                    <div class="collapse collapse-plus bg-gray-100 rounded-md py-7">
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
                         <div class="collapse-content">
                             <p>hello</p>
                         </div>
                     </div>
-                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                    <div class="collapse collapse-plus bg-gray-100 rounded-md py-7">
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
                         <div class="collapse-content">
                             <p>hello</p>
                         </div>
                     </div>
-                    <div class="collapse collapse-plus bg-gray-200 rounded-md py-7">
+                    <div class="collapse collapse-plus bg-gray-100 rounded-md py-7">
                         <input type="radio" name="my-accordion-3" />
                         <div class="collapse-title text-xl font-medium">Click to open this one and close others</div>
                         <div class="collapse-content">
@@ -390,6 +390,73 @@
                 </div>
             </div>
 
+        </section>
+
+        <!-- section: contact with us -->
+        <section class="w-11/12 md:w-10/12 2xl:container mx-auto">
+            <h2 class="text-center font-bold text-3xl lg:text-4xl text-dark-2 mb-5">
+                Contact With Us
+            </h2>
+            <p class="text-center text-desc-color lg:w-1/2 mx-auto mb-5 md:mb-14">
+                There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                alteration
+                in some form, by injected humour.
+            </p>
+
+            <div class="grid grid-cols-2 gap-5">
+                <!-- cards -->
+                <div class="grid grid-cols-2">
+                    <!-- first card -->
+                    <div class="flex flex-col justify-center items-center border-2 bg-gray-100">
+                        <img src="./images/address.png" alt="">
+                        <h3>Address</h3>
+                        <p>
+                            A108 Adam Street, <br>
+                            New York, NY 535022
+                        </p>
+                    </div>
+                    <!-- second card -->
+                    <div class="flex flex-col justify-center items-center border-2 bg-gray-100">
+                        <img src="./images/call.png" alt="">
+                        <h3>Call Us</h3>
+                        <p>
+                            +88 01750 00 00 00 <br>
+                            +88 01750 00 00 00
+                        </p>
+                    </div>
+                    <!-- third card -->
+                    <div class="flex flex-col justify-center items-center border-2 bg-gray-100">
+                        <img src="./images/email.png" alt="">
+                        <h3>Email Us</h3>
+                        <p>
+                            info@gmail.com <br>
+                            info@gmail.com
+                        </p>
+                    </div>
+                    <!-- fourth card -->
+                    <div class="flex flex-col justify-center items-center border-2 bg-gray-100">
+                        <img src="./images/address.png" alt="">
+                        <h3>Working Hours</h3>
+                        <p>
+                            Mon-Fri: 9AM to 5PM <br>
+                            Sunday: 9AM to 1 PM
+                        </p>
+                    </div>
+                </div>
+
+                <!-- form -->
+                <div>
+                    <form class="grid grid-cols-1 grid-rows-6 gap-5">
+                        <input type="text" class="bg-gray-100 rounded-md h-14 px-4" placeholder="Your name">
+                        <input type="text" class="bg-gray-100 rounded-md h-14 px-4" placeholder="Your email">
+                        <input type="text" class="bg-gray-100 rounded-md h-14 px-4" placeholder="Subject">
+                        <textarea class="bg-gray-100 rounded-md row-span-2 px-4 pt-4"
+                            placeholder="Your message"></textarea>
+                        <button class="bg-gold text-white font-semibold rounded-md w-full">Send Message</button>
+                    </form>
+                </div>
+
+            </div>
         </section>
     </main>
 
