--- a/index.html
+++ b/index.html
@@ -461,7 +461,47 @@
     </main>
 
     <!-- footer -->
-    <footer></footer>
+    <footer class="bg-black">
+        <div class="footer gap-20 p-10 w-11/12 md:w-10/12 2xl:container mx-auto text-white">
+            <nav class="">
+                <img src="./images/logo.png" alt="">
+                <p>
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour.
+                </p>
+            </nav>
+            <nav class="">
+                <h6 class="footer-title">Company</h6>
+                <div class="flex flex-col gap-5">
+                    <a class="link link-hover">About us</a>
+                    <a class="link link-hover">Contact</a>
+                    <a class="link link-hover">Jobs</a>
+                    <a class="link link-hover">Press kit</a>
+                </div>
+
+            </nav>
+            <nav class="">
+                <h6 class="footer-title">Legal</h6>
+                <div class="flex flex-col gap-5">
+                    <a class="link link-hover">Terms of use</a>
+                    <a class="link link-hover">Privacy policy</a>
+                    <a class="link link-hover">Cookie policy</a>
+                </div>
+            </nav>
+            <form class="">
+                <h6 class="footer-title">Newsletter</h6>
+                <fieldset class="form-control w-80">
+                    <label class="label">
+                        <span class="label-text text-white">Enter your email address</span>
+                    </label>
+                    <div class="flex">
+                        <input type="text" placeholder="username@site.com" class="input input-bordered rounded-r-none" />
+                        <button class="btn bg-gold text-white border-none rounded-l-none">Subscribe</button>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </footer>
 </body>
 
 </html>
